# Comp-551-A4

./: .gitignore  CMakeLists.txt
include/: dataset.h  model.h  tokenizer.h  trainer.h  vocab.h
src/: dataset.cpp  main.cpp  model.cpp  tokenizer.cpp  trainer.cpp  vocab.cpp
